# wikibot

./: .dir-locals.el  .gitignore  Build.hs  ChangeLog.md  Config.hs  README.md  Search.hs  SlackEvents.hs  WikiBot.hs  bloodhound.nix  config-example.yml  default.nix  shell.nix  slack-api.nix  wikibot.cabal  wikibot.nix
.buildkite/: pipeline.yml
nix/: bloodhound.nix  git-repo.nix  module.nix  slack-api.nix  wikibot.nix
test/: SearchSpec.hs
